# testing_pdf_gen

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: gnerate_pdf.py
src/css/: pdf.css
src/templates/: index.html
