[tool.poetry]
name = "test-docs"
version = "0.1.0"
description = ""
authors = ["Emiliano Jordan <emiliano.jordan@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
poetry = ">=1.8.4"
jinja2 = "^3.1.4"
weasyprint = "^63.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"